# dsa2-coursework

./: .gitignore  README.md  benchmark.py  procedure.py  pyproject.toml  test.txt  test_q1.py  test_q10.py  test_q11.py  test_q12.py  test_q2.py  test_q3.py  test_q4.py  test_q5.py  test_q6.py  test_q7.py  test_q8.py  test_q9.py
answers/: q1.py  q10.py  q11.py  q12.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
dumps/: dump_q1.txt  dump_q10.txt  dump_q11.txt  dump_q12.txt  dump_q2.txt  dump_q3.txt  dump_q4.txt  dump_q5.txt  dump_q6.txt  dump_q7.txt  dump_q8.txt  dump_q9.txt
ics2210/: avl_tree.py  bs_tree.py  knuth_shuffling.py  rb_tree.py  skip_list.py  untyped_avl_tree.py  untyped_rb_tree.py  untyped_tree.py
latex/: dsa.bib  report.out  report.tex  uom-coursework.cls
